# progship

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  categorize_errors.py  verify_doors.py
.github/: AGENTS.md  copilot-instructions.md
.github/agents/: client-agent.md  generation-agent.md  server-agent.md
.github/hooks/: pre-commit
.github/workflows/: ci.yml
archive/misc-tests/: INSTALL_BUILD_TOOLS.md  download_comfy_models.py  test_batch_regenerate.py  test_batch_trellis.py  test_hunyuan3d.py  test_hunyuan3d_debug.py  (+9 more)
archive/progship-core-v1/: .gitignore  README.md  pyproject.toml  regenerate_all_images.py  requirements.txt  test_asset_bundle.py  test_catalog_style.py  test_console_verbose.py  test_description_generator.py  test_final_prompts.py  test_flux.py  test_flux_fast.py  test_flux_optimized.py  test_flux_schnell.py  test_image_fast.py  test_image_generation_all.py  test_image_processing.py  test_isolated.py  test_janus_simple.py  test_models.py  test_new_models.py  test_new_prompts.py  test_ollama_flux.py  test_single_isolated.py  test_vega_isolated.py  test_verbose_descriptions.py  test_verbose_manifest.py  test_wall_direct.py  test_with_negative.py
archive/progship-core-v1/data/: facilities.json  facilities_legacy.json  light_fixtures.json  rooms.json  ship_types.json  structural_elements.json  style_descriptors.json
archive/progship-core-v1/progship/: __init__.py  cli.py
archive/progship-core-v1/progship/data/: loader.py  models.py  validator.py
archive/progship-core-v1/progship/export/: bundle.py
archive/progship-core-v1/progship/generation/: architect.py  interior.py
archive/progship-core-v1/progship/pipeline/: __init__.py  cache.py  description_generator.py  flux_schnell_generator.py  image_generator.py  image_pipeline.py  image_processing.py  janus_generator.py  llm.py  model_registry.py  ollama_image_generator.py  prompts.py  trellis_generator.py
archive/progship-core-v1/schemas/: facilities_schema.json  ship_types_schema.json  style_descriptors_schema.json
archive/progship-core-v1/test_output/: flux_test.json
crates/progship-client/: Cargo.toml
crates/progship-client/src/: camera.rs  greeble.rs  input.rs  main.rs  minimap.rs  networking.rs  rendering.rs  state.rs  ui.rs
crates/progship-core/: Cargo.toml
crates/progship-core/src/: engine.rs  lib.rs  persistence.rs
crates/progship-core/src/components/: common.rs  mod.rs  people.rs  ship.rs  social.rs
crates/progship-core/src/generation/: crew.rs  mod.rs  names.rs  ship.rs
crates/progship-core/src/systems/: activity.rs  dialogue.rs  duty.rs  events.rs  maintenance.rs  mod.rs  movement.rs  needs.rs  ship_systems.rs  social.rs  wandering.rs
crates/progship-simtest/: Cargo.toml
crates/progship-simtest/src/: main.rs
data/: facility_manifest.json
docs/: ARCHITECTURE.md  COMPONENTS.md
scripts/: rebuild.ps1  verify.ps1
(+165 files in other folders)
