[package]
name = "progship-client"
description = "ProgShip - Colony Ship Survival Game (Bevy client)"
version = "0.1.0"
edition = "2021"

[dependencies]
progship-client-sdk = { path = "../progship-client-sdk" }
progship-logic = { path = "../progship-logic" }
bevy = "0.18"
spacetimedb-sdk = "1.12"

[features]
default = []
solari = ["bevy/bevy_solari"]
