[package]
name = "progship-core"
description = "Colony ship simulation engine - ECS-based crew and systems simulation"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
hecs = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
criterion = "0.5"

# Benchmarks disabled until implemented
# [[bench]]
# name = "simulation"
# harness = false
